@@ -19,10 +19,9 @@ import org.jspecify.annotations.Nullable;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @NullMarked
-public class ProtectMaskManager extends BukkitMaskManager {
+public final class ProtectMaskManager extends BukkitMaskManager {
     private static final CuboidRegion GLOBAL = new CuboidRegion(
             BlockVector3.at(Integer.MIN_VALUE, Integer.MIN_VALUE, Integer.MIN_VALUE),
             BlockVector3.at(Integer.MAX_VALUE, Integer.MAX_VALUE, Integer.MAX_VALUE)
@@ -83,6 +82,6 @@ public class ProtectMaskManager extends BukkitMaskManager {
     public List<Area> getAreas(org.bukkit.entity.Player player, boolean whitelist) {
         return plugin.areaProvider().getAreas(player.getWorld())
                 .filter(area -> whitelist == plugin.protectionService().canEdit(player, area))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
